tests/baselines/reference/accessors_spec_section-4.5_inference.errors.txt
==== tests/cases/compiler/accessors_spec_section-4.5_inference.ts (12 errors) ====
    class A { }
    class B extends A { }
    
    class LanguageSpec_section_4_5_inference {
    
        public set InferredGetterFromSetterAnnotation(a: A) { }
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        public get InferredGetterFromSetterAnnotation() { return new B(); }
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    
        public get InferredGetterFromSetterAnnotation_GetterFirst() { return new B(); }
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        public set InferredGetterFromSetterAnnotation_GetterFirst(a: A) { }
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        
    
        public get InferredFromGetter() { return new B(); }
                   ~~~~~~~~~~~~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        public set InferredFromGetter(a) { }
                   ~~~~~~~~~~~~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    
        public set InferredFromGetter_SetterFirst(a) { }
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        public get InferredFromGetter_SetterFirst() { return new B(); }
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    
        public set InferredSetterFromGetterAnnotation(a) { }
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        public get InferredSetterFromGetterAnnotation() : A { return new B(); }
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    
        public get InferredSetterFromGetterAnnotation_GetterFirst() : A { return new B(); }
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        public set InferredSetterFromGetterAnnotation_GetterFirst(a) { }
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }